<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MTG - Archenemy</string>
    <string name="start">Start</string>
    <string name="deck_builder">Deck Builder</string>
    <string name="card">Card</string>
    <string name="next_card">Deal Card</string>
    <string name="view_ongoing">View ongoing</string>
    <string name="delete_ongoing">Remove from ongoing</string>
    <string name="new_game">New Game</string>
    <string name="save">Save</string>
    <string name="back">Discard</string>
    <string name="previous">&lt;</string>    
    <string name="next">&gt;</string>

</resources>